src/styles/styles.css
@import '../../node_modules/dio-intint/dist/styles.css';

/* Playable Ad */
html, body {
    height: 100%;
    overflow: hidden;
}
* {
    margin: 0;
    padding: 0;
}
@keyframes sliding {
    0% {
        left: 0;
    }
    50% {
        left: calc(100% - 90px);
    }
    100% {
        left: 0;
    }
}
@keyframes rotation {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}
@keyframes waiting {
    0% {
        bottom: 50px;
        transform: rotate(-45deg);
    }
    87% {
        bottom: 100px;
        transform: rotate(45deg);
    }
    100% {
        bottom: 50px;
        transform: rotate(-45deg);
    }
}
@keyframes hit {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.5) rotate(-45deg);
    }
    65% {
        transform: scale(1.5) rotate(45deg);
    }
    100% {
        transform: scale(1) rotate(0deg);
    }
}
@keyframes cta {
    0% {
        transform: scale(.85) rotate(0deg);
    }
    25% {
        transform: scale(1.15) rotate(10deg);
    }
    50% {
        transform: scale(.85) rotate(0deg);
    }
    75% {
        transform: scale(1.15) rotate(-10deg);
    }
    100% {
        transform: scale(.85) rotate(0deg);
    }
}
.hidden {
    display: none;
}
/*.screen:before {*/
/*content: ' ';*/
/*position: absolute;*/
/*top: 0;*/
/*left: 0;*/
/*right: 0;*/
/*bottom:0 ;*/
/*z-index: -1;*/
/*opacity: 0.05;*/
/**/
/*background-size: contain;*/
/*}*/
.cta {
    position: absolute;
    top: 50%;
    padding: 0 10%;
    width: 100%;
    text-align: center;
    font-family: sans-serif;
    font-size: 25px;
    animation: cta 2s ease-in-out infinite;
    box-sizing: border-box;
}
.hand {
    position: absolute;
    width: 112.5px;
    height: 80px;
    bottom: 50px;
    left: 50%;
    margin-left: -56px;
}
.hand.original {
    transform-origin: 0 70%;
    background: url('var(--URL)/hand.png');
    background-size: 100%;
}
.hand.inverted {
    transform-origin: 100% 70%;
    background: url('var(--URL)/hand_inverted.png');
    background-size: contain;
}
.hand.original-empty {
    height: 68px;
    transform-origin: 0 70%;
    background: url('var(--URL)/hand_empty.png');
    background-size: 100%;
}
.hand.inverted-empty {
    height: 68px;
    transform-origin: 100% 70%;
    background: url('var(--URL)/hand_empty_inverted.png');
    background-size: 100%;
}
/*.hand:after {*/
/*position: absolute;*/
/*content: ' ';*/
/*width: 40px;*/
/*height: 40px;*/
/*top: 50%;*/
/*margin-top: -45px;*/
/*background: url('./dealdash.jpg');*/
/*background-size: contain;*/
/*}*/
/*.hand.original:after {*/
/*right: 30px;*/
/*transform: rotate(-15deg);*/
/*}*/
/*.hand.inverted:after {*/
/*left: 30px;*/
/*transform: rotate(15deg);*/
/*}*/
.hand.waiting {
    animation: waiting 1.5s infinite;
}
.screen {
    position: relative;
    height: 100%;
    overflow: hidden;
    background: url('var(--URL)/back.jpg') no-repeat;
    background-size: cover;
}
.basket {
    width: 90px;
    height: 117px;
    background: url('var(--URL)/hat.png') no-repeat;
    background-size: 100% 100%;
    position: absolute;
    top: 50px;
    animation: sliding 3s forwards infinite linear;
}
.basket.hit {
    animation: hit 1s, sliding 3s forwards infinite linear;
}
.card {
    width: 60px;
    height: 62.5px;
    position: absolute;
    animation: rotation 1s linear infinite forwards;
    background: url('var(--URL)/card.png') no-repeat;
    background-size: contain;
}
.card.placeholder {
    opacity: 0.3;
}
.score {
    padding: 10px;
    font-family: sans-serif;
}
.close-btn {
    position: absolute;
    top: 10px;
    right: 10px;
    border: 1px solid #fff;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    line-height: 30px;
    font-size: 20px;
    color: #fff;
    cursor: pointer;
    text-align: center;
}

.win-screen {
    z-index: 10;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    height: 0;
    width: 0;
    display: flex;
    overflow: hidden;
    visibility: hidden;
    opacity: 0;
    background: rgba(0, 0, 0, 0.9);
    justify-content: center;
    align-items: center;
}
.win-screen.show {
    overflow: auto;
    height: auto;
    width: auto;
    visibility: visible;
    opacity: 1;
    transition: opacity .3s linear;
}

